Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacionalPremiunSinImpuesto.java
package org.example.bad;

public class EnvioNacionalPremiunSinImpuesto extends EnvioNacionalPremium {
    public double calcularCostoEnvio() {
        return super.calcularCostoEnvio() + 0;
    }
}
